# OlliDesk

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  build.bat  cliff.toml  main.py  ollidesk.spec  pyproject.toml
.github/workflows/: ci.yml
.ollidesk/: config.yaml  rules.md
agents/: __init__.py  agent_loop.py  context_compactor.py  ollama_client.py  tool_registry.py
core/: app.py  config.py  exceptions.py  logger.py  model_capabilities.py  model_registry.py  roles.py  search_cache.py  system_prompts.py  utils.py
docs/: DEPENDENCY.md  USER_GUIDE.md  VERSION.md
fs/: __init__.py  indexer.py  vector_store.py
state/: __init__.py  project_settings.py  session_store.py
tests/: conftest.py
tests/agents/: test_ollama_client.py
tests/core/: test_config.py
tests/fs/: test_indexer.py  test_vector_store.py
tools/: __init__.py  codebase_search.py  file_ops.py  git_ops.py  git_ops_tool.py  web_search.py
ui/: chat_panel.py  file_tree_delegate.py  main_window.py  theme.py
ui/chat/: agent_list_widget.py  chat_header.py  chat_panel.py  chat_threads.py  message_widget.py  right_panel.py
ui/dialogs/: model_manager_dialog.py  prompt_editor_dialog.py  session_manager_dialog.py  settings_dialog.py  tool_confirmation_dialog.py  wizard.py
ui/web_editor/: __init__.py  download_monaco.py  editor.html  editor.js  editor_widget.py
