[project]
name = "ollidesk"
version = "0.1.2"
description = "Local AI coding assistant for Windows 10"
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.7,<6.8",
    "pydantic>=2.9,<2.10",
    "pydantic-settings>=2.5,<2.6",
    "PyYAML>=6.0,<6.1",
    "types-pyyaml>=6.0.12,<6.1",
    "loguru>=0.7,<0.8",
    "httpx>=0.28,<0.29",
    "chromadb>=0.5,<0.6",
    "sentence-transformers>=3.0,<3.1",
    "tokenizers>=0.20,<0.21",
    "rapidocr-onnxruntime>=1.4,<1.5",
    "GitPython>=3.1,<3.2",
    "pathspec>=0.12,<0.13",
    "watchdog>=5.0,<5.1",
    "ddgs>=9.1,<10.0",
    "duckduckgo-search>=8.1,<9.0",
    "curl-cffi>=0.15,<0.16",
    "beautifulsoup4>=4.15,<4.16",
    "pygments>=2.20,<2.21",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "pytest-cov>=4.1",
    "ruff>=0.3",
    "mypy>=1.9",
    "black>=24.0",
    "isort>=5.13",
]

[tool.ruff]
line-length = 110 # Максимальная длина строки (символов)
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "PT", "RET", "SIM"]
ignore = [
"E501",   # Игнорировать слишком длинные строки
"SIM108"  # Игнорировать замену If на тернарный оператор
]

[tool.ruff.format]
quote-style = "preserve" # Оставлять кавычки (одинарные или двойные) такими, как есть
# ##### quote-style = "single" # Использовать одинарные кавычки '' вместо двойных ""
indent-style = "space" # Использовать пробелы для отступов
docstring-code-format = true # Автоматически форматировать примеры кода внутри докстрингов

[tool.ruff.lint.pep8-naming]
ignore-names = [
    "eventFilter",
    "keyPressEvent",
    "initStyleOption",
    "closeEvent"
]

# Black это более простая альтернатива Ruff
[tool.black]
line-length = 110
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 110
# Black

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
# disallow_untyped_defs = true  # Требовать аннотации типов для всех функций
ignore_missing_imports = true # Игнорировать библиотеки без поддержки типов
# ВРЕМЕННО ОТКЛЮЧАЕМ ЖЕСТКИЕ ПРАВИЛА:
disallow_untyped_defs = false       # Разрешаем функции без -> None и типов
disallow_incomplete_defs = false    # Разрешаем частично аннотированные функции
check_untyped_defs = true           # Но внутри функций код всё равно проверяем!
disallow_untyped_calls = false      # Уберет ошибки [no-untyped-call]
disallow_any_generics = false       # Уберет ошибки [type-arg] для dict без указания типов
exclude = [
    '.venv',
    'unused'
]

[[tool.mypy.overrides]]
module = "ui.dialogs.wizard"
ignore_errors = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=agents --cov=core --cov=fs --cov=state --cov=tools --cov=ui --cov-report=term-missing"

[tool.setuptools]
packages = ["agents", "core", "fs", "state", "tools", "ui"]

[dependency-groups]
dev = [
    "black>=25.12.0",
    "isort>=8.0.1",
    "mypy>=1.19.1",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.20",
]
